updating gradle to work with jdk 14. Adding assignWorkspace