@@ -38,8 +38,8 @@ subprojects {
     apply plugin: 'io.freefair.lombok'
     apply plugin: 'checkstyle'
 
-    sourceCompatibility = 13
-    targetCompatibility = 13
+    sourceCompatibility = 14
+    targetCompatibility = 14
 
     jacoco {
         toolVersion = '0.8.5'
@@ -53,7 +53,7 @@ subprojects {
 
     javadoc {
         options.addBooleanOption('html5', true)
-        options.links 'https://docs.oracle.com/en/java/javase/11/docs/api/'
+        options.links 'https://docs.oracle.com/en/java/javase/14/docs/api/'
     }
 
     dependencies {
@@ -74,6 +74,10 @@ subprojects {
         "truth=truth-java8-extension-1.0.1.jar"
     ]
 
+    tasks.withType(JavaCompile).each {
+        it.options.compilerArgs.add('--enable-preview')
+    }
+
     compileTestJava {
         moduleOptions {
             addModules = ['truth']
@@ -82,6 +86,8 @@ subprojects {
 
     test {
         useJUnitPlatform()
+
+        jvmArgs(['--enable-preview'])
 
         reports {
             html.enabled = true
